--- a/package.json
+++ b/package.json
@@ -3,20 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.3.15",
+    "@hookform/resolvers": "^2.4.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@naoki85/react-simple-pagination-component": "^0.5.0",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/material-ui": "^0.21.8",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/yup": "^0.29.11",
+    "graphql": "^15.5.0",
+    "material-ui-flat-pagination": "^4.1.1",
     "react": "^17.0.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.3.3",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "~4.1.5"
+    "react-toastify": "^7.0.4",
+    "typescript": "~4.1.5",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +53,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-addons-css-transition-group": "^15.0.5",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
